--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,14 @@
 # main links links
 main:
   - title: "About"
-    url: /about/
+    url: /publications/
 
   - title: "Resume"
-    url: /resume/    
+    url: /talks/    
 
   - title: "Projects"
-    url: /projects/    
+    url: /teaching/    
     
   - title: "Blog"
-    url: /blog/
+    url: /portfolio/
         
