--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,14 @@
 # main links links
 main:
   - title: "About"
-    url: /publications/
+    url: /talks/
 
   - title: "Resume"
-    url: /talks/    
+    url: /cv/    
 
   - title: "Projects"
-    url: /teaching/    
+    url: /publications/    
     
   - title: "Blog"
-    url: /portfolio/
+    url: /year-archive/
         
